--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
       <h1> Title </h1>
-    Hello there, awesome person! 
+<img src="https://avatars3.githubusercontent.com/u/59516350?v=4">
+
   </body>
 
 </html>
