--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <ul>
           <li>This</li>
           <li>Is</li>
-          <li>Github</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
       </ul>
 
   </body>
