--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>My awesome web page</title>
+        <link rel="stylehsheet" href="style.css">
     </head>
 
   <body>
